<resources>
    <string name="app_name">E-Quran</string>
    <string name="al_quran">Al-Quran\nArab - Terjemahan - Arti - Tafsir</string>
    <string name="nama_surat">Nama Surat</string>
    <string name="tempat_turun">Tempat turun</string>
    <string name="divider">-</string>
    <string name="arti_surat">Arti Surat</string>
    <string name="arabic_text">النصر</string>
    <string name="tab1">Ayat</string>
    <string name="tab2">Tafsir</string>
    <string name="icon_alquran">icon_alquran</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="_1">1</string>
    <string name="jumlah_ayat">jumlah ayat</string>
    <string name="deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="play_button">play_button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dots">.</string>
    <string name="latin_text">latin text</string>
    <string name="tafsir_surat">tafsir surat</string>
    <string name="iv_error">iv_error</string>
    <string name="ayat">Ayat</string>
    <string name="tafsir_ayat">Tafsir ayat</string>
</resources>