<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/nomor_surat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        app:layout_constraintStart_toEndOf="@id/nomor_surat"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nomor_ayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/play_button_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/play_button" />

    <TextView
        android:id="@+id/teksArab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textDirection="anyRtl"
        android:textColor="@color/primary"
        style="@style/Theme.ProjectEQuran.header"
        android:text="@string/arabic_text"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play"/>

    <TextView
        android:id="@+id/teksLatin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        style="@style/Theme.ProjectEQuran.subtext"
        android:text="@string/latin_text"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teksArab"/>

    <TextView
        android:id="@+id/arti_surat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        android:text="@string/arti_surat"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teksLatin"/>

</androidx.constraintlayout.widget.ConstraintLayout>