<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DeskripsiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Theme.ProjectEQuran.pageDetail"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_deskripsi_namaSurat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latin_text"
            style="@style/Theme.ProjectEQuran.header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_deskripsi_artiSurat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arti_surat"
            style="@style/Theme.ProjectEQuran.subtext"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_namaSurat"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_deskripsi_tempatTurun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_turun"
            style="@style/Theme.ProjectEQuran.subtext"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_artiSurat"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_deskripsi_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            style="@style/Theme.ProjectEQuran.subtext"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_artiSurat"
            app:layout_constraintStart_toEndOf="@+id/tv_deskripsi_tempatTurun"/>

        <TextView
            android:id="@+id/tv_deskripsi_placeholderAyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayat"
            style="@style/Theme.ProjectEQuran.subtext"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_artiSurat"
            app:layout_constraintStart_toEndOf="@+id/tv_deskripsi_jumlahAyat"/>

        <TextView
            android:id="@+id/tv_deskripsi_jumlahAyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_ayat"
            style="@style/Theme.ProjectEQuran.subtext"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_artiSurat"
            app:layout_constraintStart_toEndOf="@+id/tv_deskripsi_divider"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_deskripsi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_deskripsi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                style="@style/Theme.ProjectEQuran.subtext"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>