<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/nomor_surat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        app:layout_constraintStart_toEndOf="@id/nomor_surat"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nomor_ayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_baca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        style="@style/Theme.ProjectEQuran.bacaButtonDetail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/play_button" />

    <TextView
        android:id="@+id/tafsir_surat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        style="@style/Theme.ProjectEQuran.subtext"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/tafsir_surat"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_baca"/>

</androidx.constraintlayout.widget.ConstraintLayout>