<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nomor_surat"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/star">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamicsans_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:text="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nama_surat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/balsamicsans_bold"
        app:layout_constraintStart_toEndOf="@id/nomor_surat"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:text="@string/nama_surat" />

    <TextView
        android:id="@+id/tempat_turun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/balsamiqsans_regular"
        app:layout_constraintStart_toEndOf="@id/nomor_surat"
        app:layout_constraintTop_toBottomOf="@id/nama_surat"
        android:textColor="@color/black"
        android:text="@string/tempat_turun" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/balsamiqsans_regular"
        app:layout_constraintStart_toEndOf="@id/tempat_turun"
        app:layout_constraintTop_toBottomOf="@id/nama_surat"
        android:textColor="@color/black"
        android:text="@string/divider" />


    <TextView
        android:id="@+id/arti_surat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/balsamiqsans_regular"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/nama_surat"
        android:textColor="@color/black"
        android:text="@string/arti_surat" />

    <TextView
        android:id="@+id/nama_surat_arab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/balsamiqsans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:text="@string/arabic_text" />

</androidx.constraintlayout.widget.ConstraintLayout>